--- a/api/templates/constructor.html
+++ b/api/templates/constructor.html
@@ -12,7 +12,7 @@
 {% block content %}
     <header>
         <div class="linkblock">
-            <a href="./index.html" class="">Python и разработка</a> /
+            <a href="{% url 'index' %}" class="">Python и разработка</a> /
             <a href="{% url 'constructor' %}">Конструктор</a>
         </div>
 
