--- a/api/templates/constructor.html
+++ b/api/templates/constructor.html
@@ -18,7 +18,7 @@
 
         <button class="enter">Выйти</button>
     </header>
-    <form action="{% url 'constructor' %}" method="post">
+    <form action="{% url 'constructor' %}" method="post" enctype="multipart/form-data">
         <main class="mainSize">
             <h1 class="pageTitle">Конструктор конспекта</h1>
             <hr/>
