--- a/api/static/css/introduction.css
+++ b/api/static/css/introduction.css
@@ -33,8 +33,8 @@ pre {
 
 .explanation_designation img {
   align-self: flex-start;
-  width: 20%;
-  height: 20%;
+  width: 50px;
+  height: 50px;
 }
 
 .lessons_designation {
