--- a/api/templates/introduction.html
+++ b/api/templates/introduction.html
@@ -6,23 +6,24 @@
 {% block style %}
     <link rel="stylesheet" href="{% static 'css/basics.css' %}"/>
     <link rel="stylesheet" href="{% static '/css/introduction.css' %}"/>
+    <link rel="stylesheet" href="{% static '/css/adaptive.css' %}"/>
 {% endblock %}
 
 {% block content %}
     <script src="{% static 'js/colorIntrod.js' %}"></script>
-    <header>
-        <div class="linkblock">
+    <header class="introHead">
+        <div class="linkblock intro">
             <a href="{% url 'index' %}" class="">Python и разработка</a> /
             <a href="{% url 'basic' theme.parent_page.id %}">{{ theme.parent_page.name }}</a> /
             <a href="">{{ theme.name }}</a>
         </div>
 
-        <button class="enter">Выйти</button>
+        <button class="enter intro">Выйти</button>
     </header>
-    <main class="mainSize">
+    <main class="mainSize introductionBlock">
         <img src="{% static '/assets/1basics.svg' %}" alt="" style="width: 100px; height:
         120px;">
-        <h1 class="pageTitle">{{ theme.name }}</h1>
+        <h1 class="pageTitle page_intro">{{ theme.name }}</h1>
 
         <div class="searchBasics">
             <form action="{% url 'theme_search' theme.id %}" method="get">
@@ -39,26 +40,13 @@
                     </p>
                 {% elif block.type == 'CODE' %}
                     <div class="example_designation">
-                        <pre>{{ block.text|linebreaksbr  }}</pre>
+                        <pre>{{ block.text|linebreaksbr }}</pre>
                     </div>
                 {% elif block.type == 'HEADERTEXT' %}
                     <h3>{{ block.text }}</h3>
                 {% elif block.type == 'QUOTETEXT' %}
                     <div class="designation">
-                        <svg
-                                xmlns="http://www.w3.org/2000/svg"
-                                width="10"
-                                height="81"
-                                viewBox="0 0 4 81"
-                                fill="none"
-                        >
-                            <path
-                                    d="M2 2L2 79"
-                                    stroke="white"
-                                    stroke-width="4"
-                                    stroke-linecap="round"
-                            />
-                        </svg>
+                        <img src="./assets/lapo4ka.svg" alt="" />
                         <p>
                             {{ block.text }}
                         </p>
