--- a/api/static/css/introduction.css
+++ b/api/static/css/introduction.css
@@ -116,7 +116,7 @@ pre {
   font-weight: 400;
 }
 
-.example_designation p {
+.example_designation pre {
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
