--- a/api/static/css/adaptive.css
+++ b/api/static/css/adaptive.css
@@ -356,8 +356,8 @@
     font-weight: 600;
   }
   .leaftTheme img {
-    width: 13.333px !important;
-    height: 15px !important;
+    width: 100% !important;
+    height: 20px !important;
   }
 
   .basicsMainImg {
@@ -616,8 +616,8 @@
     font-weight: 600;
   }
   .leaftTheme img {
-    width: 13.333px !important;
-    height: 15px !important;
+    width: 100% !important;
+    height: 20px !important;
   }
   .searchBasics button {
     left: 67.5%;
