--- a/api/static/css/basics.css
+++ b/api/static/css/basics.css
@@ -1,60 +1,69 @@
 header {
-  padding: 20px 0 40px 0;
+    padding: 20px 0 40px 0;
 }
+
 main {
-  width: 784px;
-  margin: 40px auto;
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
+    width: 784px;
+    margin: 40px auto;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
+
 .mainSize {
-  height: 2315px;
+    height: 2315px;
 }
+
 .searchBasics input {
-  width: 784px;
-  height: 40px;
-  padding: 9px 0px 9px 30px;
-  background-color: rgba(78, 78, 78, 1);
-  border-radius: 7px;
-  position: absolute;
+    width: 784px;
+    height: 40px;
+    padding: 9px 0px 9px 30px;
+    background-color: rgba(78, 78, 78, 1);
+    border-radius: 7px;
+    position: absolute;
 }
 
 .searchBasics input::placeholder {
-  color: rgba(98, 98, 98, 1);
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
+    color: rgba(98, 98, 98, 1);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
 }
 
 .searchBasics button {
-  background-color: rgba(237, 237, 237, 1);
-  padding: 10px 30px;
-  color: rgba(55, 55, 55, 1);
-  border-radius: 7px;
-  position: relative;
-  left: 86%;
+    background-color: rgba(237, 237, 237, 1);
+    padding: 10px 30px;
+    color: rgba(55, 55, 55, 1);
+    border-radius: 7px;
+    position: relative;
+    left: 86%;
 }
+
 .leaftTheme {
-  display: flex;
-  gap: 20px;
-  align-items: center;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.leaftTheme img {
+    width: 40px !important;
+    height: 40px !important;
 }
 
 .theme {
-  width: 784px;
-  height: 40px;
-  padding: 0px 20px 0px 25px;
-  background-color: rgba(78, 78, 78, 1);
-  border-radius: 7px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    width: 784px;
+    height: 40px;
+    padding: 0px 20px 0px 25px;
+    background-color: rgba(78, 78, 78, 1);
+    border-radius: 7px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 p {
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  color: rgba(255, 255, 255, 1);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 1);
 }
