--- a/api/templates/basics.html
+++ b/api/templates/basics.html
@@ -15,7 +15,7 @@
             <a href="">{{ page.name }}</a>
         </div>
         {% if request.user.is_authenticated %}
-            <a href="{% url 'logout' %}">Выйти</a>
+            <a class="enter" href="{% url 'logout' %}">Выйти</a>
         {% endif %}
     </header>
     <main>
